--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "test-plain-obj": "node tasks/test_plain_obj.js",
     "test": "npm run test-jasmine -- --nowatch && npm run test-bundle && npm run test-image && npm run test-export && npm run test-syntax && npm run lint",
     "mathjax3": "node devtools/test_dashboard/server.js --mathjax3",
+    "mathjax4": "node devtools/test_dashboard/server.js --mathjax4",
     "mathjax3chtml": "node devtools/test_dashboard/server.js --mathjax3chtml",
+    "mathjax4chtml": "node devtools/test_dashboard/server.js --mathjax4chtml",
     "strict": "node devtools/test_dashboard/server.js --strict",
     "start": "node devtools/test_dashboard/server.js",
     "baseline": "node test/image/make_baseline.js",
@@ -159,6 +161,7 @@
     "madge": "^6.1.0",
     "mathjax-v2": "npm:mathjax@2.7.5",
     "mathjax-v3": "npm:mathjax@^3.2.2",
+    "mathjax-v4": "npm:mathjax@4.0.0-beta.4",
     "minify-stream": "^2.1.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "npm-link-check": "^5.0.0",
