esbuild first cut seems to work for everything except regl traces

--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "test-requirejs": "node tasks/test_requirejs.js",
     "test-plain-obj": "node tasks/test_plain_obj.js",
     "test": "npm run test-jasmine -- --nowatch && npm run test-bundle && npm run test-image && npm run test-export && npm run test-syntax && npm run lint",
-    "b64": "python3 test/image/generate_b64_mocks.py && node devtools/test_dashboard/server.js",
-    "mathjax3": "node devtools/test_dashboard/server.js --mathjax3",
-    "mathjax3chtml": "node devtools/test_dashboard/server.js --mathjax3chtml",
-    "strict": "node devtools/test_dashboard/server.js --strict",
-    "start": "node devtools/test_dashboard/server.js",
+    "b64": "python3 test/image/generate_b64_mocks.py && node devtools/test_dashboard/server.mjs",
+    "mathjax3": "node devtools/test_dashboard/server.mjs --mathjax3",
+    "mathjax3chtml": "node devtools/test_dashboard/server.mjs --mathjax3chtml",
+    "strict": "node devtools/test_dashboard/server.mjs --strict",
+    "start": "node devtools/test_dashboard/server.mjs",
     "baseline": "node test/image/make_baseline.js",
     "noci-baseline": "npm run cibuild && ./tasks/noci_test.sh image && git checkout dist && echo 'Please do not commit unless the change was expected!'",
     "preversion": "check-node-version --node 16 --npm 8 && npm-link-check && npm ls --prod --all",
@@ -134,6 +134,9 @@
     "chttps": "^1.0.6",
     "deep-equal": "^2.2.3",
     "ecstatic": "^4.1.4",
+    "esbuild": "^0.20.0",
+    "esbuild-plugin-environment": "^0.3.0",
+    "esbuild-plugin-glsl": "^1.2.2",
     "eslint": "^8.56.0",
     "extra-iterable": "^2.5.22",
     "falafel": "^2.2.5",
