--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
     working_directory: ~/plotly.js
     steps:
       - browser-tools/install-browser-tools: &browser-versions
+          chrome-version: 116.0.5845.110
           install-firefox: false
           install-geckodriver: false
       - attach_workspace:
@@ -92,6 +93,7 @@ jobs:
     working_directory: ~/plotly.js
     steps:
       - browser-tools/install-browser-tools: &browser-versions
+          chrome-version: 116.0.5845.110
           install-firefox: false
           install-geckodriver: false
       - attach_workspace:
@@ -111,6 +113,7 @@ jobs:
     working_directory: ~/plotly.js
     steps:
       - browser-tools/install-browser-tools: &browser-versions
+          chrome-version: 116.0.5845.110
           install-firefox: false
           install-geckodriver: false
       - attach_workspace:
@@ -130,6 +133,7 @@ jobs:
     working_directory: ~/plotly.js
     steps:
       - browser-tools/install-browser-tools: &browser-versions
+          chrome-version: 116.0.5845.110
           install-firefox: false
           install-geckodriver: false
       - attach_workspace:
@@ -148,6 +152,7 @@ jobs:
     working_directory: ~/plotly.js
     steps:
       - browser-tools/install-browser-tools: &browser-versions
+          chrome-version: 116.0.5845.110
           install-firefox: false
           install-geckodriver: false
       - attach_workspace:
@@ -166,6 +171,7 @@ jobs:
     working_directory: ~/plotly.js
     steps:
       - browser-tools/install-browser-tools: &browser-versions
+          chrome-version: 116.0.5845.110
           install-firefox: false
           install-geckodriver: false
       - attach_workspace:
