--- a/stackgl_modules/package.json
+++ b/stackgl_modules/package.json
@@ -13,7 +13,7 @@
     "box-intersect": "plotly/box-intersect#v1.1.0",
     "convex-hull": "^1.0.3",
     "delaunay-triangulate": "^1.1.6",
-    "gl-axes3d": "^1.6.0",
+    "gl-axes3d": "github:gl-vis/gl-axes3d#05b08d33f51404a05ac85d42d69beaccfe94c821",
     "gl-cone3d": "^1.6.0",
     "gl-error3d": "^1.0.16",
     "gl-heatmap2d": "^1.1.1",
