--- a/package.json
+++ b/package.json
@@ -74,15 +74,19 @@
     "@plotly/d3-sankey": "0.7.2",
     "@plotly/d3-sankey-circular": "0.33.1",
     "@plotly/mapbox-gl": "1.13.4",
+    "@plotly/point-cluster": "^3.1.9",
     "@turf/area": "^7.1.0",
     "@turf/bbox": "^7.1.0",
     "@turf/centroid": "^7.1.0",
+    "alpha-shape": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
+    "box-intersect": "plotly/box-intersect#v1.1.0",
     "canvas-fit": "^1.5.0",
     "color-alpha": "1.0.4",
     "color-normalize": "1.5.0",
     "color-parse": "2.0.0",
     "color-rgba": "2.1.1",
+    "convex-hull": "^1.0.3",
     "country-regex": "^1.1.0",
     "css-loader": "^7.1.2",
     "d3-force": "^1.2.1",
@@ -93,18 +97,45 @@
     "d3-interpolate": "^3.0.1",
     "d3-time": "^1.1.0",
     "d3-time-format": "^2.2.3",
+    "delaunay-triangulate": "^1.1.6",
     "esbuild-style-plugin": "^1.6.3",
     "fast-isnumeric": "^1.1.4",
+    "gl-axes3d": "^1.7.1",
+    "gl-cone3d": "^1.6.1",
+    "gl-error3d": "^1.0.17",
+    "gl-heatmap2d": "^1.1.1",
+    "gl-line3d": "^1.2.2",
     "gl-mat4": "^1.2.0",
+    "gl-mesh3d": "^2.3.2",
+    "gl-plot2d": "^1.5.0",
+    "gl-plot3d": "^2.4.7",
+    "gl-pointcloud2d": "^1.0.3",
+    "gl-scatter3d": "^1.4.1",
+    "gl-select-box": "^1.0.4",
+    "gl-shader": "4.3.1",
+    "gl-spikes2d": "^1.0.2",
+    "gl-spikes3d": "^1.0.11",
+    "gl-streamtube3d": "^1.4.2",
+    "gl-surface3d": "^1.6.2",
     "gl-text": "^1.4.0",
+    "glslify": "^7.1.1",
     "has-hover": "^1.0.1",
     "has-passive-events": "^1.0.0",
+    "incremental-convex-hull": "plotly/incremental-convex-hull#v1.1.0",
     "is-mobile": "^4.0.0",
     "maplibre-gl": "^4.5.2",
+    "matrix-camera-controller": "^2.1.4",
     "mouse-change": "^1.4.0",
     "mouse-event-offset": "^3.0.2",
     "mouse-wheel": "^1.2.0",
     "native-promise-only": "^0.8.1",
+    "ndarray": "plotly/ndarray#v1.1.0",
+    "ndarray-extract-contour": "plotly/ndarray-extract-contour#v1.1.0",
+    "ndarray-gradient": "plotly/ndarray-gradient#v1.1.0",
+    "ndarray-linear-interpolate": "^1.0.0",
+    "ndarray-ops": "plotly/ndarray-ops#v1.3.0",
+    "ndarray-pack": "plotly/ndarray-pack#v1.3.0",
+    "ndarray-sort": "plotly/ndarray-sort#v1.1.0",
     "parse-svg-path": "^0.1.2",
     "point-in-polygon": "^1.1.0",
     "polybooljs": "^1.2.2",
@@ -114,16 +145,25 @@
     "regl-line2d": "^3.1.3",
     "regl-scatter2d": "^3.3.1",
     "regl-splom": "^1.0.14",
+    "right-now": "^1.0.0",
+    "robust-determinant": "plotly/robust-determinant#v1.2.2",
+    "robust-in-sphere": "1.2.1",
+    "robust-linear-solve": "plotly/robust-linear-solve#v1.1.2",
+    "robust-orientation": "1.2.1",
+    "simplicial-complex-contour": "plotly/simplicial-complex-contour#v1.1.0",
     "strongly-connected-components": "^1.0.1",
     "style-loader": "^4.0.0",
     "superscript-text": "^1.0.0",
+    "surface-nets": "plotly/surface-nets#v1.1.1",
     "svg-path-sdf": "^1.1.3",
     "tinycolor2": "^1.4.2",
     "to-px": "1.0.1",
     "topojson-client": "^3.1.0",
+    "vectorize-text": "3.2.2",
     "webgl-context": "^2.2.0",
-    "world-calendars": "^1.0.3"
-  },
+    "world-calendars": "^1.0.3",
+    "zero-crossings": "plotly/zero-crossings#v1.1.0"
+},
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "amdefine": "^1.0.1",
